Trabalhos/Syntactic_parser/sintatico.output
Terminals unused in grammar

    BREAK
    SWITCH
    CASE
    DEFAULT
    TYPEDEF
    STRUCT
    POINTER


Grammar

    0 $accept: Programa $end

    1 Programa: DeclaracoesOuFuncao LoopDeclaracoesOuFuncao

    2 DeclaracoesOuFuncao: Declaracoes
    3                    | Funcao

    4 LoopDeclaracoesOuFuncao: DeclaracoesOuFuncao LoopDeclaracoesOuFuncao
    5                        | %empty

    6 Declaracoes: NUMBER_SIGN DEFINE IDENTIFIER Expressao
    7            | DeclaracaoVariaveis
    8            | DeclaracaoPrototipos

    9 Funcao: Tipo LoopVezes IDENTIFIER Parametros L_CURLY_BRACKET LoopFuncaoDeclaracaoVariaveis Comandos R_CURLY_BRACKET

   10 LoopVezes: MULTIPLY LoopVezes
   11          | %empty

   12 LoopFuncaoDeclaracaoVariaveis: DeclaracaoVariaveis LoopFuncaoDeclaracaoVariaveis
   13                              | %empty

   14 DeclaracaoVariaveis: Tipo LoopDeclaracaoVariaveis SEMICOLON

   15 LoopDeclaracaoVariaveis: LoopVezes IDENTIFIER LoopExpressao Switch1 Switch2

   16 Switch1: ASSIGN ExpressaoAtribuicao
   17        | %empty

   18 Switch2: COMMA LoopDeclaracaoVariaveis
   19        | %empty

   20 LoopExpressao: L_SQUARE_BRACKET Expressao R_SQUARE_BRACKET LoopExpressao
   21              | %empty

   22 DeclaracaoPrototipos: Tipo LoopVezes IDENTIFIER Parametros SEMICOLON

   23 Parametros: L_PAREN LoopParametros R_PAREN

   24 LoopParametros: Tipo LoopVezes IDENTIFIER LoopExpressao Switch3
   25               | %empty

   26 Switch3: COMMA LoopParametros
   27        | %empty

   28 Tipo: INT
   29     | CHAR
   30     | VOID

   31 Bloco: L_CURLY_BRACKET Comandos R_CURLY_BRACKET

   32 Comandos: ListaComandos LoopListaComandos

   33 LoopListaComandos: ListaComandos LoopListaComandos
   34                  | %empty

   35 ListaComandos: DO Bloco WHILE L_PAREN Expressao R_PAREN SEMICOLON
   36              | IF L_PAREN Expressao R_PAREN Bloco Switch5
   37              | WHILE L_PAREN Expressao R_PAREN Bloco
   38              | FOR L_PAREN Switch6 SEMICOLON Switch6 SEMICOLON Switch6 R_PAREN Bloco
   39              | PRINTF L_PAREN STRING Switch7 R_PAREN SEMICOLON
   40              | SCANF L_PAREN STRING COMMA BITWISE_AND R_PAREN SEMICOLON
   41              | EXIT L_PAREN Expressao R_PAREN SEMICOLON
   42              | RETURN Switch6 SEMICOLON
   43              | Expressao SEMICOLON
   44              | SEMICOLON
   45              | Bloco

   46 Switch5: ELSE Bloco
   47        | %empty

   48 Switch6: Expressao
   49        | %empty

   50 Switch7: COMMA Expressao
   51        | %empty

   52 Expressao: ExpressaoAtribuicao
   53          | Expressao COMMA ExpressaoAtribuicao

   54 ExpressaoAtribuicao: ExpressaoCondicional
   55                    | ExpressaoUnaria Switch8 ExpressaoAtribuicao

   56 Switch8: ASSIGN
   57        | ADD_ASSIGN
   58        | MINUS_ASSIGN

   59 ExpressaoCondicional: ExpressaoOrLogico Switch9

   60 Switch9: TERNARY_CONDITIONAL Expressao COLON ExpressaoCondicional
   61        | %empty

   62 ExpressaoOrLogico: ExpressaoAndLogico
   63                  | ExpressaoOrLogico LOGICAL_OR ExpressaoAndLogico

   64 ExpressaoAndLogico: ExpressaoOr
   65                   | ExpressaoAndLogico LOGICAL_AND ExpressaoOr

   66 ExpressaoOr: ExpressaoXor
   67            | ExpressaoOr BITWISE_OR ExpressaoXor

   68 ExpressaoXor: ExpressaoAnd
   69             | ExpressaoXor BITWISE_XOR ExpressaoAnd

   70 ExpressaoAnd: ExpressaoIgualdade
   71             | ExpressaoAnd BITWISE_AND ExpressaoIgualdade

   72 ExpressaoIgualdade: ExpressaoRelacional
   73                   | ExpressaoIgualdade EQUAL ExpressaoRelacional
   74                   | ExpressaoIgualdade NOT_EQUAL ExpressaoRelacional

   75 ExpressaoRelacional: ExpressaoShift
   76                    | ExpressaoRelacional LESS_THAN ExpressaoShift
   77                    | ExpressaoRelacional GREATER_THAN ExpressaoShift
   78                    | ExpressaoRelacional LESS_EQUAL ExpressaoShift
   79                    | ExpressaoRelacional GREATER_EQUAL ExpressaoShift

   80 ExpressaoShift: ExpressaoAditiva
   81               | ExpressaoShift L_SHIFT ExpressaoAditiva
   82               | ExpressaoShift R_SHIFT ExpressaoAditiva

   83 ExpressaoAditiva: ExpressaoMultiplicativa
   84                 | ExpressaoAditiva PLUS ExpressaoMultiplicativa
   85                 | ExpressaoAditiva MINUS ExpressaoMultiplicativa

   86 ExpressaoMultiplicativa: ExpressaoCast
   87                        | ExpressaoMultiplicativa MULTIPLY ExpressaoCast
   88                        | ExpressaoMultiplicativa DIV ExpressaoCast
   89                        | ExpressaoMultiplicativa REMAINDER ExpressaoCast

   90 ExpressaoCast: ExpressaoUnaria
   91              | L_PAREN Tipo LoopVezes R_PAREN ExpressaoCast

   92 ExpressaoUnaria: ExpressaoPosfixa
   93                | INC ExpressaoUnaria
   94                | DEC ExpressaoUnaria
   95                | BITWISE_AND ExpressaoCast
   96                | MULTIPLY ExpressaoCast
   97                | PLUS ExpressaoCast
   98                | MINUS ExpressaoCast
   99                | NOT ExpressaoCast
  100                | BITWISE_NOT ExpressaoCast

  101 ExpressaoPosfixa: ExpressaoPrimaria
  102                 | ExpressaoPosfixa L_SQUARE_BRACKET Expressao R_SQUARE_BRACKET
  103                 | ExpressaoPosfixa INC
  104                 | ExpressaoPosfixa DEC
  105                 | ExpressaoPosfixa L_PAREN Switch10 R_PAREN

  106 Switch10: ExpressaoAtribuicao Switch11
  107         | %empty

  108 Switch11: COMMA ExpressaoAtribuicao Switch11
  109         | %empty

  110 ExpressaoPrimaria: IDENTIFIER
  111                  | Numero
  112                  | CHARACTER
  113                  | STRING
  114                  | L_PAREN Expressao R_PAREN

  115 Numero: NUM_INTEGER
  116       | NUM_HEXA
  117       | NUM_OCTAL


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    VOID (258) 30
    INT (259) 28
    CHAR (260) 29
    RETURN (261) 42
    BREAK (262)
    SWITCH (263)
    CASE (264)
    DEFAULT (265)
    DO (266) 35
    WHILE (267) 35 37
    FOR (268) 38
    IF (269) 36
    ELSE (270) 46
    TYPEDEF (271)
    STRUCT (272)
    PLUS (273) 84 97
    MINUS (274) 85 98
    MULTIPLY (275) 10 87 96
    DIV (276) 88
    REMAINDER (277) 89
    INC (278) 93 103
    DEC (279) 94 104
    BITWISE_AND (280) 40 71 95
    BITWISE_OR (281) 67
    BITWISE_NOT (282) 100
    BITWISE_XOR (283) 69
    NOT (284) 99
    LOGICAL_AND (285) 65
    LOGICAL_OR (286) 63
    EQUAL (287) 73
    NOT_EQUAL (288) 74
    LESS_THAN (289) 76
    GREATER_THAN (290) 77
    LESS_EQUAL (291) 78
    GREATER_EQUAL (292) 79
    R_SHIFT (293) 82
    L_SHIFT (294) 81
    ASSIGN (295) 16 56
    ADD_ASSIGN (296) 57
    MINUS_ASSIGN (297) 58
    SEMICOLON (298) 14 22 35 38 39 40 41 42 43 44
    COMMA (299) 18 26 40 50 53 108
    COLON (300) 60
    L_PAREN (301) 23 35 36 37 38 39 40 41 91 105 114
    R_PAREN (302) 23 35 36 37 38 39 40 41 91 105 114
    L_CURLY_BRACKET (303) 9 31
    R_CURLY_BRACKET (304) 9 31
    L_SQUARE_BRACKET (305) 20 102
    R_SQUARE_BRACKET (306) 20 102
    TERNARY_CONDITIONAL (307) 60
    NUMBER_SIGN (308) 6
    POINTER (309)
    PRINTF (310) 39
    SCANF (311) 40
    DEFINE (312) 6
    EXIT (313) 41
    IDENTIFIER (314) 6 9 15 22 24 110
    NUM_OCTAL (315) 117
    NUM_INTEGER (316) 115
    NUM_HEXA (317) 116
    STRING (318) 39 40 113
    CHARACTER (319) 112


Nonterminals, with rules where they appear

    $accept (65)
        on left: 0
    Programa (66)
        on left: 1
        on right: 0
    DeclaracoesOuFuncao (67)
        on left: 2 3
        on right: 1 4
    LoopDeclaracoesOuFuncao (68)
        on left: 4 5
        on right: 1 4
    Declaracoes (69)
        on left: 6 7 8
        on right: 2
    Funcao (70)
        on left: 9
        on right: 3
    LoopVezes (71)
        on left: 10 11
        on right: 9 10 15 22 24 91
    LoopFuncaoDeclaracaoVariaveis (72)
        on left: 12 13
        on right: 9 12
    DeclaracaoVariaveis (73)
        on left: 14
        on right: 7 12
    LoopDeclaracaoVariaveis (74)
        on left: 15
        on right: 14 18
    Switch1 (75)
        on left: 16 17
        on right: 15
    Switch2 (76)
        on left: 18 19
        on right: 15
    LoopExpressao (77)
        on left: 20 21
        on right: 15 20 24
    DeclaracaoPrototipos (78)
        on left: 22
        on right: 8
    Parametros (79)
        on left: 23
        on right: 9 22
    LoopParametros (80)
        on left: 24 25
        on right: 23 26
    Switch3 (81)
        on left: 26 27
        on right: 24
    Tipo (82)
        on left: 28 29 30
        on right: 9 14 22 24 91
    Bloco (83)
        on left: 31
        on right: 35 36 37 38 45 46
    Comandos (84)
        on left: 32
        on right: 9 31
    LoopListaComandos (85)
        on left: 33 34
        on right: 32 33
    ListaComandos (86)
        on left: 35 36 37 38 39 40 41 42 43 44 45
        on right: 32 33
    Switch5 (87)
        on left: 46 47
        on right: 36
    Switch6 (88)
        on left: 48 49
        on right: 38 42
    Switch7 (89)
        on left: 50 51
        on right: 39
    Expressao (90)
        on left: 52 53
        on right: 6 20 35 36 37 41 43 48 50 53 60 102 114
    ExpressaoAtribuicao (91)
        on left: 54 55
        on right: 16 52 53 55 106 108
    Switch8 (92)
        on left: 56 57 58
        on right: 55
    ExpressaoCondicional (93)
        on left: 59
        on right: 54 60
    Switch9 (94)
        on left: 60 61
        on right: 59
    ExpressaoOrLogico (95)
        on left: 62 63
        on right: 59 63
    ExpressaoAndLogico (96)
        on left: 64 65
        on right: 62 63 65
    ExpressaoOr (97)
        on left: 66 67
        on right: 64 65 67
    ExpressaoXor (98)
        on left: 68 69
        on right: 66 67 69
    ExpressaoAnd (99)
        on left: 70 71
        on right: 68 69 71
    ExpressaoIgualdade (100)
        on left: 72 73 74
        on right: 70 71 73 74
    ExpressaoRelacional (101)
        on left: 75 76 77 78 79
        on right: 72 73 74 76 77 78 79
    ExpressaoShift (102)
        on left: 80 81 82
        on right: 75 76 77 78 79 81 82
    ExpressaoAditiva (103)
        on left: 83 84 85
        on right: 80 81 82 84 85
    ExpressaoMultiplicativa (104)
        on left: 86 87 88 89
        on right: 83 84 85 87 88 89
    ExpressaoCast (105)
        on left: 90 91
        on right: 86 87 88 89 91 95 96 97 98 99 100
    ExpressaoUnaria (106)
        on left: 92 93 94 95 96 97 98 99 100
        on right: 55 90 93 94
    ExpressaoPosfixa (107)
        on left: 101 102 103 104 105
        on right: 92 102 103 104 105
    Switch10 (108)
        on left: 106 107
        on right: 105
    Switch11 (109)
        on left: 108 109
        on right: 106 108
    ExpressaoPrimaria (110)
        on left: 110 111 112 113 114
        on right: 101
    Numero (111)
        on left: 115 116 117
        on right: 111


State 0

    0 $accept: . Programa $end

    VOID         shift, and go to state 1
    INT          shift, and go to state 2
    CHAR         shift, and go to state 3
    NUMBER_SIGN  shift, and go to state 4

    Programa              go to state 5
    DeclaracoesOuFuncao   go to state 6
    Declaracoes           go to state 7
    Funcao                go to state 8
    DeclaracaoVariaveis   go to state 9
    DeclaracaoPrototipos  go to state 10
    Tipo                  go to state 11


State 1

   30 Tipo: VOID .

    $default  reduce using rule 30 (Tipo)


State 2

   28 Tipo: INT .

    $default  reduce using rule 28 (Tipo)


State 3

   29 Tipo: CHAR .

    $default  reduce using rule 29 (Tipo)


State 4

    6 Declaracoes: NUMBER_SIGN . DEFINE IDENTIFIER Expressao

    DEFINE  shift, and go to state 12


State 5

    0 $accept: Programa . $end

    $end  shift, and go to state 13


State 6

    1 Programa: DeclaracoesOuFuncao . LoopDeclaracoesOuFuncao

    VOID         shift, and go to state 1
    INT          shift, and go to state 2
    CHAR         shift, and go to state 3
    NUMBER_SIGN  shift, and go to state 4

    $default  reduce using rule 5 (LoopDeclaracoesOuFuncao)

    DeclaracoesOuFuncao      go to state 14
    LoopDeclaracoesOuFuncao  go to state 15
    Declaracoes              go to state 7
    Funcao                   go to state 8
    DeclaracaoVariaveis      go to state 9
    DeclaracaoPrototipos     go to state 10
    Tipo                     go to state 11


State 7

    2 DeclaracoesOuFuncao: Declaracoes .

    $default  reduce using rule 2 (DeclaracoesOuFuncao)


State 8

    3 DeclaracoesOuFuncao: Funcao .

    $default  reduce using rule 3 (DeclaracoesOuFuncao)


State 9

    7 Declaracoes: DeclaracaoVariaveis .

    $default  reduce using rule 7 (Declaracoes)


State 10

    8 Declaracoes: DeclaracaoPrototipos .

    $default  reduce using rule 8 (Declaracoes)


State 11

    9 Funcao: Tipo . LoopVezes IDENTIFIER Parametros L_CURLY_BRACKET LoopFuncaoDeclaracaoVariaveis Comandos R_CURLY_BRACKET
   14 DeclaracaoVariaveis: Tipo . LoopDeclaracaoVariaveis SEMICOLON
   22 DeclaracaoPrototipos: Tipo . LoopVezes IDENTIFIER Parametros SEMICOLON

    MULTIPLY  shift, and go to state 16

    $default  reduce using rule 11 (LoopVezes)

    LoopVezes                go to state 17
    LoopDeclaracaoVariaveis  go to state 18


State 12

    6 Declaracoes: NUMBER_SIGN DEFINE . IDENTIFIER Expressao

    IDENTIFIER  shift, and go to state 19


State 13

    0 $accept: Programa $end .

    $default  accept


State 14

    4 LoopDeclaracoesOuFuncao: DeclaracoesOuFuncao . LoopDeclaracoesOuFuncao

    VOID         shift, and go to state 1
    INT          shift, and go to state 2
    CHAR         shift, and go to state 3
    NUMBER_SIGN  shift, and go to state 4

    $default  reduce using rule 5 (LoopDeclaracoesOuFuncao)

    DeclaracoesOuFuncao      go to state 14
    LoopDeclaracoesOuFuncao  go to state 20
    Declaracoes              go to state 7
    Funcao                   go to state 8
    DeclaracaoVariaveis      go to state 9
    DeclaracaoPrototipos     go to state 10
    Tipo                     go to state 11


State 15

    1 Programa: DeclaracoesOuFuncao LoopDeclaracoesOuFuncao .

    $default  reduce using rule 1 (Programa)


State 16

   10 LoopVezes: MULTIPLY . LoopVezes

    MULTIPLY  shift, and go to state 16

    $default  reduce using rule 11 (LoopVezes)

    LoopVezes  go to state 21


State 17

    9 Funcao: Tipo LoopVezes . IDENTIFIER Parametros L_CURLY_BRACKET LoopFuncaoDeclaracaoVariaveis Comandos R_CURLY_BRACKET
   15 LoopDeclaracaoVariaveis: LoopVezes . IDENTIFIER LoopExpressao Switch1 Switch2
   22 DeclaracaoPrototipos: Tipo LoopVezes . IDENTIFIER Parametros SEMICOLON

    IDENTIFIER  shift, and go to state 22


State 18

   14 DeclaracaoVariaveis: Tipo LoopDeclaracaoVariaveis . SEMICOLON

    SEMICOLON  shift, and go to state 23


State 19

    6 Declaracoes: NUMBER_SIGN DEFINE IDENTIFIER . Expressao

    PLUS         shift, and go to state 24
    MINUS        shift, and go to state 25
    MULTIPLY     shift, and go to state 26
    INC          shift, and go to state 27
    DEC          shift, and go to state 28
    BITWISE_AND  shift, and go to state 29
    BITWISE_NOT  shift, and go to state 30
    NOT          shift, and go to state 31
    L_PAREN      shift, and go to state 32
    IDENTIFIER   shift, and go to state 33
    NUM_OCTAL    shift, and go to state 34
    NUM_INTEGER  shift, and go to state 35
    NUM_HEXA     shift, and go to state 36
    STRING       shift, and go to state 37
    CHARACTER    shift, and go to state 38

    Expressao                go to state 39
    ExpressaoAtribuicao      go to state 40
    ExpressaoCondicional     go to state 41
    ExpressaoOrLogico        go to state 42
    ExpressaoAndLogico       go to state 43
    ExpressaoOr              go to state 44
    ExpressaoXor             go to state 45
    ExpressaoAnd             go to state 46
    ExpressaoIgualdade       go to state 47
    ExpressaoRelacional      go to state 48
    ExpressaoShift           go to state 49
    ExpressaoAditiva         go to state 50
    ExpressaoMultiplicativa  go to state 51
    ExpressaoCast            go to state 52
    ExpressaoUnaria          go to state 53
    ExpressaoPosfixa         go to state 54
    ExpressaoPrimaria        go to state 55
    Numero                   go to state 56


State 20

    4 LoopDeclaracoesOuFuncao: DeclaracoesOuFuncao LoopDeclaracoesOuFuncao .

    $default  reduce using rule 4 (LoopDeclaracoesOuFuncao)


State 21

   10 LoopVezes: MULTIPLY LoopVezes .

    $default  reduce using rule 10 (LoopVezes)


State 22

    9 Funcao: Tipo LoopVezes IDENTIFIER . Parametros L_CURLY_BRACKET LoopFuncaoDeclaracaoVariaveis Comandos R_CURLY_BRACKET
   15 LoopDeclaracaoVariaveis: LoopVezes IDENTIFIER . LoopExpressao Switch1 Switch2
   22 DeclaracaoPrototipos: Tipo LoopVezes IDENTIFIER . Parametros SEMICOLON

    L_PAREN           shift, and go to state 57
    L_SQUARE_BRACKET  shift, and go to state 58

    $default  reduce using rule 21 (LoopExpressao)

    LoopExpressao  go to state 59
    Parametros     go to state 60


State 23

   14 DeclaracaoVariaveis: Tipo LoopDeclaracaoVariaveis SEMICOLON .

    $default  reduce using rule 14 (DeclaracaoVariaveis)


State 24

   97 ExpressaoUnaria: PLUS . ExpressaoCast

    PLUS         shift, and go to state 24
    MINUS        shift, and go to state 25
    MULTIPLY     shift, and go to state 26
    INC          shift, and go to state 27
    DEC          shift, and go to state 28
    BITWISE_AND  shift, and go to state 29
    BITWISE_NOT  shift, and go to state 30
    NOT          shift, and go to state 31
    L_PAREN      shift, and go to state 32
    IDENTIFIER   shift, and go to state 33
    NUM_OCTAL    shift, and go to state 34
    NUM_INTEGER  shift, and go to state 35
    NUM_HEXA     shift, and go to state 36
    STRING       shift, and go to state 37
    CHARACTER    shift, and go to state 38

    ExpressaoCast      go to state 61
    ExpressaoUnaria    go to state 62
    ExpressaoPosfixa   go to state 54
    ExpressaoPrimaria  go to state 55
    Numero             go to state 56


State 25

   98 ExpressaoUnaria: MINUS . ExpressaoCast

    PLUS         shift, and go to state 24
    MINUS        shift, and go to state 25
    MULTIPLY     shift, and go to state 26
    INC          shift, and go to state 27
    DEC          shift, and go to state 28
    BITWISE_AND  shift, and go to state 29
    BITWISE_NOT  shift, and go to state 30
    NOT          shift, and go to state 31
    L_PAREN      shift, and go to state 32
    IDENTIFIER   shift, and go to state 33
    NUM_OCTAL    shift, and go to state 34
    NUM_INTEGER  shift, and go to state 35
    NUM_HEXA     shift, and go to state 36
    STRING       shift, and go to state 37
    CHARACTER    shift, and go to state 38

    ExpressaoCast      go to state 63
    ExpressaoUnaria    go to state 62
    ExpressaoPosfixa   go to state 54
    ExpressaoPrimaria  go to state 55
    Numero             go to state 56


State 26

   96 ExpressaoUnaria: MULTIPLY . ExpressaoCast

    PLUS         shift, and go to state 24
    MINUS        shift, and go to state 25
    MULTIPLY     shift, and go to state 26
    INC          shift, and go to state 27
    DEC          shift, and go to state 28
    BITWISE_AND  shift, and go to state 29
    BITWISE_NOT  shift, and go to state 30
    NOT          shift, and go to state 31
    L_PAREN      shift, and go to state 32
    IDENTIFIER   shift, and go to state 33
    NUM_OCTAL    shift, and go to state 34
    NUM_INTEGER  shift, and go to state 35
    NUM_HEXA     shift, and go to state 36
    STRING       shift, and go to state 37
    CHARACTER    shift, and go to state 38

    ExpressaoCast      go to state 64
    ExpressaoUnaria    go to state 62
    ExpressaoPosfixa   go to state 54
    ExpressaoPrimaria  go to state 55
    Numero             go to state 56


State 27

   93 ExpressaoUnaria: INC . ExpressaoUnaria

    PLUS         shift, and go to state 24
    MINUS        shift, and go to state 25
    MULTIPLY     shift, and go to state 26
    INC          shift, and go to state 27
    DEC          shift, and go to state 28
    BITWISE_AND  shift, and go to state 29
    BITWISE_NOT  shift, and go to state 30
    NOT          shift, and go to state 31
    L_PAREN      shift, and go to state 65
    IDENTIFIER   shift, and go to state 33
    NUM_OCTAL    shift, and go to state 34
    NUM_INTEGER  shift, and go to state 35
    NUM_HEXA     shift, and go to state 36
    STRING       shift, and go to state 37
    CHARACTER    shift, and go to state 38

    ExpressaoUnaria    go to state 66
    ExpressaoPosfixa   go to state 54
    ExpressaoPrimaria  go to state 55
    Numero             go to state 56


State 28

   94 ExpressaoUnaria: DEC . ExpressaoUnaria

    PLUS         shift, and go to state 24
    MINUS        shift, and go to state 25
    MULTIPLY     shift, and go to state 26
    INC          shift, and go to state 27
    DEC          shift, and go to state 28
    BITWISE_AND  shift, and go to state 29
    BITWISE_NOT  shift, and go to state 30
    NOT          shift, and go to state 31
    L_PAREN      shift, and go to state 65
    IDENTIFIER   shift, and go to state 33
    NUM_OCTAL    shift, and go to state 34
    NUM_INTEGER  shift, and go to state 35
    NUM_HEXA     shift, and go to state 36
    STRING       shift, and go to state 37
    CHARACTER    shift, and go to state 38

    ExpressaoUnaria    go to state 67
    ExpressaoPosfixa   go to state 54
    ExpressaoPrimaria  go to state 55
    Numero             go to state 56


State 29

   95 ExpressaoUnaria: BITWISE_AND . ExpressaoCast

    PLUS         shift, and go to state 24
    MINUS        shift, and go to state 25
    MULTIPLY     shift, and go to state 26
    INC          shift, and go to state 27
    DEC          shift, and go to state 28
    BITWISE_AND  shift, and go to state 29
    BITWISE_NOT  shift, and go to state 30
    NOT          shift, and go to state 31
    L_PAREN      shift, and go to state 32
    IDENTIFIER   shift, and go to state 33
    NUM_OCTAL    shift, and go to state 34
    NUM_INTEGER  shift, and go to state 35
    NUM_HEXA     shift, and go to state 36
    STRING       shift, and go to state 37
    CHARACTER    shift, and go to state 38

    ExpressaoCast      go to state 68
    ExpressaoUnaria    go to state 62
    ExpressaoPosfixa   go to state 54
    ExpressaoPrimaria  go to state 55
    Numero             go to state 56


State 30

  100 ExpressaoUnaria: BITWISE_NOT . ExpressaoCast

    PLUS         shift, and go to state 24
    MINUS        shift, and go to state 25
    MULTIPLY     shift, and go to state 26
    INC          shift, and go to state 27
    DEC          shift, and go to state 28
    BITWISE_AND  shift, and go to state 29
    BITWISE_NOT  shift, and go to state 30
    NOT          shift, and go to state 31
    L_PAREN      shift, and go to state 32
    IDENTIFIER   shift, and go to state 33
    NUM_OCTAL    shift, and go to state 34
    NUM_INTEGER  shift, and go to state 35
    NUM_HEXA     shift, and go to state 36
    STRING       shift, and go to state 37
    CHARACTER    shift, and go to state 38
